--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url("./util.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,6 +16,6 @@
   --background: 207 10% 13%;
   --foreground: 0 0% 88%;
 
-  --muted: 240 3.7% 15.9%;
-  --muted-foreground: 240 5% 64.9%;
+  --muted: 240 3.7% 60%;
+  --muted-foreground: 240 5% 60%;
 }
