--- a/src/styles/util.css
+++ b/src/styles/util.css
@@ -2,6 +2,10 @@
   .no-break {
     -webkit-column-break-inside: avoid;
   }
+  body {
+    -webkit-tap-highlight-color: transparent;
+    background-color: hsl(var(--background));
+  }
 }
 
 @layer base {
